--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="/styles/responsive.css">
     <link rel="stylesheet" href="/styles/home.css">
+    <link rel="stylesheet" href="/styles/modal.css">
     
 
 </head>
@@ -28,7 +29,7 @@
             <header>
 
                 <img src="icones/logo.svg" alt="Logomarca">
-                <a href="#">
+                <a href="/create-point.html">
                     <span></span>
                     Cadastre um ponto de coleta
                 </a>
@@ -51,11 +52,31 @@
     </div>
 
   
+    <div id="modal" class = "hide">
+        <div class="content">
+            <div class="header">
+                <h1>Pontos de Coleta</h1>
+                <a href="#">Fechar</a>
+            </div>
+            <form action="/search-results.html">
+                <label for="search">Cidade</label>
+                <div class="search field">
+                    <input 
+                    type ="text"
+                    name = "search"
+                    placeholder="Pesquise por Cidade"
+                    >
+                    <button>
+                        <img src="/icones/search.svg" alt="Buscar">
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
 
 
 
-
-
+<script src ="scripts/index.js"></script>
 </body>
 
 
